# mauikit

./: .gitignore  .kde-ci.yml  .qdocconf  CMakeLists.txt  Mainpage.dox  MauiKitConfig.cmake.in  MauiKitConfig.cmake.in.5  MauiKitConfig.cmake.in.6  Messages.sh  README.md  config-OpenMP.h.cmake  mauikit.py  metainfo.yaml
demo/: CMakeLists.txt  main.qml
demo.6/: CMakeLists.txt
demo.6/src/: CMakeLists.txt  main.cpp  main.qml  org.kde.mauidemo.desktop
demo.6/src/controls/: AltBrowserPage.qml  AppViewsPage.qml  ButtonsPage.qml  DelegatesPage.qml  DemoSection.qml  GridBrowserPage.qml  ImagePage.qml  IndicatorsPage.qml  InputsPage.qml  ListBrowserPage.qml  MauiPage.qml  PopupsPage.qml  SplitViewPage.qml  TabViewPage.qml
demo/src/: CMakeLists.txt  demo_assets.qrc  main.cpp  main.qml
demo/src/controls/: AltBrowserPage.qml  AppViewsPage.qml  BarsPage.qml  ButtonsPage.qml  DelegatesPage.qml  DemoPage.qml  DemoSection.qml  GridBrowserPage.qml  InputsPage.qml  ListBrowserPage.qml  MauiPage.qml  OthersPage.qml  PopupsPage.qml  SideBarViewPage.qml  SplitViewPage.qml  TemplatesPage.qml
examples/basic/: CMakeLists.txt  main.cpp  main.qml
examples/mauilist/: CMakeLists.txt  main.cpp  main.qml  plantslist.cpp  plantslist.h
src/: CMakeLists.txt  MauiKit-android-dependencies.xml  assets.qrc  icons.qrc  mauikit.cpp  mauikit.h  mauikit.qrc
src/controls/: AbstractSideBar.qml  ActionSideBar.qml  AltBrowser.qml  AppViewLoader.qml  AppViews.qml  ApplicationWindow.qml  Badge.qml  BrowserDelegate.qml  CSDControls.qml  Chip.qml  CloseButton.qml  CollageItem.qml  ColorsRow.qml  ContextualMenu.qml  Dialog.qml  Doodle.qml  Editor.qml  FileBrowser.qml  FileDialog.qml  FileListingDialog.qml  FlexListItem.qml  FloatingButton.qml  FontPicker.qml  FontPickerDialog.qml  GalleryRollItem.qml  GalleryRollTemplate.qml  GridBrowser.qml  GridBrowserDelegate.qml  GridItemTemplate.qml  GridView.qml  Holder.qml  Icon.qml  IconItem.qml  IconLabel.qml  ItemDelegate.qml  LabelDelegate.qml  ListBrowser.qml  ListBrowserDelegate.qml  ListDelegate.qml  ListItemTemplate.qml  (+46 more)
src/controls.5/: AppViews.qml  ApplicationWindow.qml  CSDControls.qml  Chip.qml  CollageItem.qml  ColorTransition.qml  DialogWindow.qml  Doodle.qml  DoodleCanvas.qml  EdgeShadow.qml  FileListingDialog.qml  FlexListItem.qml  FlexSectionItem.qml  FloatingButton.qml  GalleryRollTemplate.qml  GridBrowser.qml  GridBrowserDelegate.qml  Holder.qml  Icon.qml  IconItem.qml  InfoDialog.qml  InputDialog.qml  LabelDelegate.qml  ListItemTemplate.qml  Page.qml  PageLayout.qml  PopupPage.qml  SectionGroup.qml  SettingsDialog.qml  ShadowedRectangle.qml  SideBarView.qml  SplitView.qml  SplitViewItem.qml  SwipeItemDelegate.qml  TabBar.qml  TabButton.qml  TabView.qml  TabViewButton.qml  TextFieldPopup.qml  ToolBar.qml  (+2 more)
src/controls.5/private/: AboutDialog.qml  ActionGroup.qml  BaseWindow.qml  CheckBoxItem.qml  ShareDialog.qml  ShareDialogLinux.qml  SideBar.qml  ToastArea.qml  WindowControlsLinux.qml
src/controls.6/: AltBrowser.qml  AnimatedImageViewer.qml  AppViewLoader.qml  AppViews.qml  ApplicationWindow.qml  Badge.qml  CSDControls.qml  Chip.qml  CloseButton.qml  CollageItem.qml  ColorsRow.qml  ContextualMenu.qml  Dialog.qml  DialogWindow.qml  Doodle.qml  DoodleCanvas.qml  FileListingDialog.qml  FlexListItem.qml  FlexSectionItem.qml  FloatingButton.qml  FontPicker.qml  FontPickerDialog.qml  FontsComboBox.qml  GalleryRollItem.qml  GalleryRollTemplate.qml  GridBrowser.qml  GridBrowserDelegate.qml  GridItemTemplate.qml  Holder.qml  Icon.qml  IconItem.qml  IconLabel.qml  ImageViewer.qml  InfoDialog.qml  InputDialog.qml  ItemDelegate.qml  LabelDelegate.qml  ListBrowser.qml  ListBrowserDelegate.qml  ListDelegate.qml  (+41 more)
src/controls.6/plugin/: PagePlugin.qml
src/controls.6/private/: AboutDialog.qml  ActionGroup.qml  BaseWindow.qml  CheckBoxItem.qml  ColorTransition.qml  DropDownIndicator.qml  EdgeShadow.qml  Rectangle.qml  ShareDialog.qml  ShareDialogLinux.qml  SideBar.qml  ToastArea.qml  ToolBarSection.qml  WindowResizeHandlers.qml
src/controls/labs/: ActionToolBar.qml  AlternateListItem.qml  AnimatedImageViewer.qml  CSDControls.qml  Chip.qml  CollageItem.qml  ColorTransition.qml  ColorsRow.qml  ComboBox.qml  ContextualMenu.qml  Doodle.qml  DoodleCanvas.qml  FileListingDialog.qml  FlexListItem.qml  IconItem.qml  (+21 more)
src/csd.5/: mauiproject.conf
src/libs/: appview.h  controls.cpp  controls.h  style.cpp  style.h  tabview.h
src/maui-style/: BusyIndicator.qml  Button.qml  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Frame.qml  GroupBox.qml  ItemDelegate.qml  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  Pane.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RadioDelegate.qml  RadioIndicator.qml  RangeSlider.qml  ScrollBar.qml  ScrollView.qml  Slider.qml  SpinBox.qml  SplitView.qml  StackView.qml  SwipeView.qml  Switch.qml  SwitchDelegate.qml  SwitchIndicator.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolButton.qml  ToolTip.qml  (+3 more)
src/style.5/: ApplicationWindow.qml  Button.qml  CheckBox.qml  CheckIndicator.qml  ComboBox.qml  Dial.qml  Dialog.qml  DialogButtonBox.qml  Drawer.qml  Frame.qml  GroupBox.qml  Label.qml  Menu.qml  MenuItem.qml  MenuSeparator.qml  Page.qml  Popup.qml  ProgressBar.qml  RadioButton.qml  RangeSlider.qml  ScrollView.qml  SplitView.qml  StackView.qml  SwipeView.qml  SwitchIndicator.qml  TabBar.qml  TabButton.qml  TextArea.qml  TextField.qml  ToolBar.qml  ToolButton.qml  ToolSeparator.qml  ToolTip.qml  Tumbler.qml
src/style.6/: CMakeLists.txt  mauistyleplugin.cpp  mauistyleplugin.h
src/utils/: appsettings.cpp  appsettings.h  basictheme.cpp  basictheme_p.h  colorutils.cpp  colorutils.h  csdcontrols.cpp  csdcontrols.h  fmh.cpp  fmh.h  fmstatic.cpp  fontpickermodel.cpp  fontpickermodel.h  handy.cpp  handy.h  icon.cpp  icon.h  imagecolors.cpp  imagecolors.h  managedtexturenode.cpp  managedtexturenode.h  mauiapp.cpp  mauiapp.h  moduleinfo.cpp  moduleinfo.h  notify.cpp  notify.h  platformtheme.cpp  platformtheme.h  utils.h  wheelhandler.cpp  wheelhandler.h
(+224 files in other folders)
